sites/all/themes/asb/sass/asb.scss
/* ... */
.page-schemes .region-search.hidden {
  overflow: visible;
}

.region-search {
  background-color: $panel;
  border-bottom: 1px $rules-color solid;
}

.front .region-search,
.page-schemes .region-search {
  background-color: none;
  border-bottom: none;
  @include zigzag-border ($panel, $odd-backdrop, $panel);
}

.region-search {
  @include transition-property(padding,max-height);
  @include transition-duration(.5s);
  @include transition-timing-function(ease-in-out);
  padding: 1em 0 2em 0;
  overflow: visible;  
  max-height: auto;
  display: block;
  .views-exposed-form {
    display: block;
    @include transition-property(opacity);
    @include transition-delay(.15s);
    @include transition-duration(.35s);
    @include transition-timing-function(ease-in-out);    
  }
  &.atrest {
    @include transition-duration(0);  
  }
  &.hidden, &.atrest {
    // display: none;
    max-height: 0px;
    padding: 0;
    overflow: hidden;
    border-bottom: none;
    .views-exposed-form {
      display: block;
      opacity: 0;
    }
  }
}


$headers: sprite-map("headers/*.png", $position: -4px);
@import "headers/*.png";
@include all-headers-sprites;

.scheme-collection{
  h2.block-title {
    @include box-sizing( border-box );
    box-sizing: border-box !important;
    margin-top: 15px;
    padding-left: 50px;
    margin-bottom: 4px;
  }

  #block-views-scheme-overview-block-1 {
    h2.block-title {
      @extend .headers-added;
      background-position: sprite-position( $headers, added, 0, -2px);
    }
  }
  #block-views-scheme-overview-block-2 {
    h2.block-title {
      @extend .headers-popular;
      background-position: sprite-position( $headers, popular, 0, -2px);
    }
  }
  #block-views-scheme-overview-block-3 {
    padding-top: 10px;
    h2.block-title {
      @extend .headers-completed;
      background-position: sprite-position( $headers, completed, 0, -2px);
    }
  }
  #block-views-scheme-overview-block-4 {
    h2.block-title {
      @extend .headers-added;
      background-position: sprite-position( $headers, featured, 0, -2px);
    }
  }
  #block-views-467d272784c6e1a84b15cc4f6b486792 {
    h2.block-title {
      @extend .headers-added;
      background-position: sprite-position( $headers, leading, 0, -2px);
    }
  }
  #block-views-6d49aa04d92fbf681ed33c7a9575c935 {
    h2.block-title {
      @extend .headers-added;
      background-position: sprite-position( $headers, following, 0, -2px);
    }
  }
 
}


// ////////////////////////////
// Icons
// entypo-

.field-location {
  @include font-icon-base($family:"entypo", $font-size: 2em, $margin: .25em 0 0 0, $width: .3em);
  @extend %entypo-location;
  &:before{
    width: .5em;
    text-align: center;
  }
}
.status-info a.icon {
  @extend %entypo-pencil;
  color: $text-color;
}

section.content,
article.comment,
.scheme-leader-contact,
.status-info,
.modal-edit {
  a {
      @include font-icon-base($family:"entypo", $font-size: 2.5rem, $margin: 0.1em, $width: .5em);
      color: $text-color;
      text-align: left;
      &.edit,
      &.ctools-use-modal { 
        @include font-icon-base($font-size: 3rem);
        @extend %entypo-pencil; 
      }
      &:after {
        line-height: 1.2em;
      }
    // @include replace-text();
  }
  ul.links.inline li {
    &.comment-delete a{ @extend %entypo-circled-cross; }
    &.comment-edit a { @extend %entypo-pencil; }
    &.comment-reply a { @extend %entypo-reply; }
    &.comment-add a { @extend %entypo-reply; }
  }
}

#block-asb-scheme-group-info .scheme-leader .scheme-leader-contact a.ctools-use-modal {
  @include font-icon-base($family:"entypo", $font-size: 2em, $margin: .25em 0 0 0, $width: .3em);
  @extend %entypo-mail;
  &.contact-me {
    @extend %entypo-mail;
  }
}

aside.scheme-meta {
  h6 {
    padding: 0;
    margin: 0;
  }
}


//Lists
ul#ui-button {
  @include clearfix;
}

ul#ui-button,
ul.tags {
  margin: 0;
  padding: 0;
  li {
    @include inline-list;
    @include zen-float;
    &:nth-child(2) {
      padding-left: 10px;
    }
  }
}
ul.tags li a {
  padding: 0;
}

aside {
  .item-list ul {
    margin: 0;
    padding: 0;
    li {
      list-style: none;
      padding: 5px 0;
      margin-right: 0;
      margin-left: 0;
      border-bottom: {
        @include standard-border;
      }
    }
  }
}

//Definition list
dl.issue dd {
  margin: 0;
  padding: 0;
}

//Buttons
a.ui-button,
.ui-button a,
ul.ui-button li.ui-button a,
.add-goal a {
  @include button($color: $button-color-secondary, $font-family: $base-font-family, $transform: none);
  &:link,
  &:visited,
  &:hover {
    color: #fff;
  }
}

a.ui-button.primary,
.ui-button.primary a {
  @include button($color: $accent, $font-family: $base-font-family, $transform: none);
  &:link,
  &:visited,
  &:hover {
    color: #fff;
  }
}

ul.tags {
  list-style:none;
  li {
    display: inline-block;
    a {
      display: block;
      padding: .25em .5em;
    }
  }
}

.loading_spinner {
  @include load-spinner;
}


// //////////////////////
// Content Headers
// //////////////////////

#content {
  &> header,
  &> article > header {
    min-height: 75px;
    padding: 25px 0;
    background-color: $panel;

    section.content,
    aside {
      // padding: 1em;
    }
    section.content {
      h6 {
        padding-top: 0;
        margin-top:0;
      }
    }
  }
}
/* ... */

